--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Currency Conversion</string>
+    <string name="conversion">Conversion</string>
+    <string name="currency_code_Name">Currency Code &amp; Name</string>
+    <string name="search">Search</string>
 </resources>
